[B]Version 1.0.3[/B]
- Fix encoding error with danish chars in .py file

[B]Version 1.0.2[/B]
- Prepare for official repository

[B]Version 1.0.1[/B]
- It is now possible to receive the new high quality Internet radio services provided by DR (MPEG-4 AAC @ 192 kbit/s).
- It is still possible to receive the usual DR Internet radio services (Windows Media Audio @ 128, 64 or 32 kbit/s).
- An add-on setting has been added to choose between the WMA and AAC formats. The default setting is AAC (@ 192 kbit/s).

[B]Version 1.0.0[/B]
- Initial version