@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-    <string id="30000">Generelt</string>
-	<string id="30001">Format</string>
-	<string id="30002">Kvalitet</string>
-</strings>
