@@ -1,69 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-    <string id="30000">General</string>
-    <string id="30001">Format</string>
-    <string id="30002">Quality</string>
-
-    <!-- AAC channels -->
-    <string id="30101">DR P1</string>
-    <string id="30201">rtmp://live.gss.dr.dk/live/Channel3_HQ</string>
-    <string id="30102">DR P2</string>
-    <string id="30202">rtmp://live.gss.dr.dk/live/Channel4_HQ</string>
-    <string id="30103">DR P3</string>
-    <string id="30203">rtmp://live.gss.dr.dk/live/Channel5_HQ</string>
-    <string id="30104">DR P4 København</string>
-    <string id="30204">rtmp://live.gss.dr.dk/live/Channel8_HQ</string>
-    <string id="30105">DR P4 Sjælland</string>
-    <string id="30205">rtmp://live.gss.dr.dk/live/Channel11_HQ</string>
-    <string id="30106">DR P4 Østjylland</string>
-    <string id="30206">rtmp://live.gss.dr.dk/live/Channel14_HQ</string>
-    <string id="30107">DR P4 Syd</string>
-    <string id="30207">rtmp://live.gss.dr.dk/live/Channel12_HQ</string>
-    <string id="30108">DR P4 Fyn</string>
-    <string id="30208">rtmp://live.gss.dr.dk/live/Channel7_HQ</string>
-    <string id="30109">DR P4 Nordjylland</string>
-    <string id="30209">rtmp://live.gss.dr.dk/live/Channel10_HQ</string>
-    <string id="30110">DR P4 Midt &amp; Vest</string>
-    <string id="30210">rtmp://live.gss.dr.dk/live/Channel9_HQ</string>
-    <string id="30111">DR P4 Trekanten</string>
-    <string id="30211">rtmp://live.gss.dr.dk/live/Channel13_HQ</string>
-    <string id="30112">DR P4 Bornholm</string>
-    <string id="30212">rtmp://live.gss.dr.dk/live/Channel6_HQ</string>
-    <string id="30113">DR P4 Esbjerg</string>
-    <string id="30213">rtmp://live.gss.dr.dk/live/Channel15_HQ</string>
-    <string id="30114">DR P4 NordvestSjælland</string>
-    <string id="30214">rtmp://live.gss.dr.dk/live/Channel16_HQ</string>
-    <string id="30115">DR P5</string>
-    <string id="30215">rtmp://live.gss.dr.dk/live/Channel16_HQ</string>
-    <string id="30116">DR Barometer</string>
-    <string id="30216">rtmp://live.gss.dr.dk/live/Channel17_HQ</string>
-    <string id="30117">DR Hit</string>
-    <string id="30217">rtmp://live.gss.dr.dk/live/Channel21_HQ</string>
-    <string id="30118">DR Soft</string>
-    <string id="30218">rtmp://live.gss.dr.dk/live/Channel28_HQ</string>
-    <string id="30119">DR Boogieradio</string>
-    <string id="30219">rtmp://live.gss.dr.dk/live/Channel18_HQ</string>
-    <string id="30120">DR Jazz</string>
-    <string id="30220">rtmp://live.gss.dr.dk/live/Channel22_HQ</string>
-    <string id="30121">DR Oline</string>
-    <string id="30221">rtmp://live.gss.dr.dk/live/Channel24_HQ</string>
-    <string id="30122">DR Dansktop</string>
-    <string id="30222">rtmp://live.gss.dr.dk/live/Channel19_HQ</string>
-    <string id="30123">DR Rock</string>
-    <string id="30223">rtmp://live.gss.dr.dk/live/Channel27_HQ</string>
-    <string id="30124">DR Unga Bunga</string>
-    <string id="30224">rtmp://live.gss.dr.dk/live/Channel29_HQ</string>
-    <string id="30125">DR Evergreen</string>
-    <string id="30225">rtmp://live.gss.dr.dk/live/Channel20_HQ</string>
-    <string id="30126">DR P5000</string>
-    <string id="30226">rtmp://live.gss.dr.dk/live/Channel2_HQ</string>
-    <string id="30127">DR Klassisk</string>
-    <string id="30227">rtmp://live.gss.dr.dk/live/Channel23_HQ</string>
-    <string id="30128">DR R&amp;B</string>
-    <string id="30228">rtmp://live.gss.dr.dk/live/Channel26_HQ</string>
-    <string id="30129">DR World</string>
-    <string id="30229">rtmp://live.gss.dr.dk/live/Channel30_HQ</string>
-    <string id="30130">DR Nyheder</string>
-    <string id="30230">rtmp://live.gss.dr.dk/live/Channel1_HQ</string>
-
-</strings>
